PlayerUIクラスとDrawPositionの追加 ModeManager.cppの謎コードの修正 BrotherクラスとYoungerBrotherクラスのメンバ変数をPlayerクラスに移した。 Texture順番.txtの更新 GameScene.cppではYoungerBrotherの引数を修正したので、生成もとのGameSceneも修正 GameScene.hはDrawPositionクラスが増えたので、メンバで持たせた CollisionChecker.hはインクルードを前方宣言に修正した。 Map.hは空のenumを削除と、描画領域の中心のメンバ変数を追加

--- a/Brother/Brother/Brother/Brother.vcxproj
+++ b/Brother/Brother/Brother/Brother.vcxproj
@@ -15,6 +15,7 @@
     <ClCompile Include="CollisionChecker.cpp" />
     <ClCompile Include="ConnectingScene.cpp" />
     <ClCompile Include="D3DManager.cpp" />
+    <ClCompile Include="DrawPositionSetter.cpp" />
     <ClCompile Include="DSoundManager.cpp" />
     <ClCompile Include="GameMain.cpp" />
     <ClCompile Include="GameScene.cpp" />
@@ -29,6 +30,7 @@
     <ClCompile Include="ModeManager.cpp" />
     <ClCompile Include="OpeningScene.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerUI.cpp" />
     <ClCompile Include="ResultScene.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneChangeListener.cpp" />
@@ -52,6 +54,7 @@
     <ClInclude Include="CollisionChecker.h" />
     <ClInclude Include="ConnectingScene.h" />
     <ClInclude Include="D3DManager.h" />
+    <ClInclude Include="DrawPositionSetter.h" />
     <ClInclude Include="DSoundManager.h" />
     <ClInclude Include="GameMain.h" />
     <ClInclude Include="GameScene.h" />
@@ -66,6 +69,7 @@
     <ClInclude Include="ModeManager.h" />
     <ClInclude Include="OpeningScene.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerUI.h" />
     <ClInclude Include="ResultScene.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneChangeListener.h" />
