--- a/Brother/Brother/Brother.vcxproj.filters
+++ b/Brother/Brother/Brother.vcxproj.filters
@@ -137,6 +137,9 @@
     <Filter Include="Library\StencilManager">
       <UniqueIdentifier>{61dbcdf8-3cc4-43dc-888b-8efeb0c27825}</UniqueIdentifier>
     </Filter>
+    <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\Map\MapObject\WoodBox">
+      <UniqueIdentifier>{a87cc17c-c4e0-4120-802c-fa3db9e581d4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="XInput_lib.cpp">
@@ -268,6 +271,9 @@
     <ClCompile Include="GameScene.cpp">
       <Filter>WinMain\GameMain\SceneManager\Scene\GameScene</Filter>
     </ClCompile>
+    <ClCompile Include="WoodBox.cpp">
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\Map\MapObject\WoodBox</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="XInput_lib.h">
@@ -395,6 +401,9 @@
     </ClInclude>
     <ClInclude Include="StencilManager.h">
       <Filter>Library\StencilManager</Filter>
+    </ClInclude>
+    <ClInclude Include="WoodBox.h">
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\Map\MapObject\WoodBox</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
