--- a/Brother/Brother/Brother.vcxproj.filters
+++ b/Brother/Brother/Brother.vcxproj.filters
@@ -131,9 +131,6 @@
     <Filter Include="WinMain\GameMain\SceneManager\Scene\LogoScene\LogoBackGround">
       <UniqueIdentifier>{a49ce375-20e4-4fe4-9476-8b58a3eb98e2}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Library\InputDevice">
-      <UniqueIdentifier>{3033e11b-993d-452a-b40d-3054f1da0f60}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Library\StencilManager">
       <UniqueIdentifier>{61dbcdf8-3cc4-43dc-888b-8efeb0c27825}</UniqueIdentifier>
     </Filter>
@@ -145,6 +142,9 @@
     </Filter>
     <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\PositionManager">
       <UniqueIdentifier>{6a54d30a-5dca-4ede-8e02-8a9bed2697fd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Library\DSoundManager\InputDevice">
+      <UniqueIdentifier>{3033e11b-993d-452a-b40d-3054f1da0f60}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -158,7 +158,7 @@
       <Filter>Library\DSoundManager</Filter>
     </ClCompile>
     <ClCompile Include="InputDevice.cpp">
-      <Filter>Library\InputDevice</Filter>
+      <Filter>Library\DSoundManager\InputDevice</Filter>
     </ClCompile>
     <ClCompile Include="Texture.cpp">
       <Filter>Library\Texture</Filter>
@@ -298,7 +298,7 @@
       <Filter>Library\DSoundManager</Filter>
     </ClInclude>
     <ClInclude Include="InputDevice.h">
-      <Filter>Library\InputDevice</Filter>
+      <Filter>Library\DSoundManager\InputDevice</Filter>
     </ClInclude>
     <ClInclude Include="Texture.h">
       <Filter>Library\Texture</Filter>
