--- a/Brother/Brother/Brother.vcxproj.filters
+++ b/Brother/Brother/Brother.vcxproj.filters
@@ -101,9 +101,6 @@
     <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene">
       <UniqueIdentifier>{79625aeb-cce5-4777-9d5c-24ce4705a9ff}</UniqueIdentifier>
     </Filter>
-    <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerBrother">
-      <UniqueIdentifier>{2cfd6569-fdbe-418e-976b-b174aa768f37}</UniqueIdentifier>
-    </Filter>
     <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerCollisionChecker">
       <UniqueIdentifier>{cdbf8baf-9fb4-4b8e-af01-f07a39e5a720}</UniqueIdentifier>
     </Filter>
@@ -149,9 +146,6 @@
     <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene">
       <UniqueIdentifier>{9736e5e9-19af-49db-b848-1a3a2afae095}</UniqueIdentifier>
     </Filter>
-    <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientBrother">
-      <UniqueIdentifier>{e18c1aa7-fc11-43a7-ba85-cffb57db5249}</UniqueIdentifier>
-    </Filter>
     <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientCollisionChecker">
       <UniqueIdentifier>{f75ef672-894b-4284-8d68-97695bb6b15f}</UniqueIdentifier>
     </Filter>
@@ -185,23 +179,11 @@
     <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayer">
       <UniqueIdentifier>{1c5533e2-696c-4f00-b587-41a8312f3468}</UniqueIdentifier>
     </Filter>
-    <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayerUI">
-      <UniqueIdentifier>{c18a509b-bec0-4145-8852-337cdf643129}</UniqueIdentifier>
-    </Filter>
     <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientShadow">
       <UniqueIdentifier>{260bfbc1-7a69-47f6-adb0-6d36fd13f9f9}</UniqueIdentifier>
     </Filter>
     <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientText">
       <UniqueIdentifier>{a4bf1ac2-e017-459f-87a7-df8fc609fc45}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientYoungerBrother">
-      <UniqueIdentifier>{5355f8da-70bf-4827-99a7-0807d9908bba}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerYoungerBrother">
-      <UniqueIdentifier>{b2461888-b64e-47b6-a9d4-9a3a84e2caf2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayerUI">
-      <UniqueIdentifier>{02917e0b-7ce9-4882-8c49-f2994ac4230c}</UniqueIdentifier>
     </Filter>
     <Filter Include="Library\Server">
       <UniqueIdentifier>{bf22c3c4-0865-4c5f-a32c-a9ca043cf638}</UniqueIdentifier>
@@ -217,6 +199,24 @@
     </Filter>
     <Filter Include="WinMain\GameMain\SceneManager\Scene\ResultScene\ResultText">
       <UniqueIdentifier>{4a60d7af-dd0a-426a-b2f9-df31f3dceff0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayer\ClientPlayerUI">
+      <UniqueIdentifier>{c18a509b-bec0-4145-8852-337cdf643129}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayer\ClientYoungerBrother">
+      <UniqueIdentifier>{5355f8da-70bf-4827-99a7-0807d9908bba}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayer\ClientBrother">
+      <UniqueIdentifier>{e18c1aa7-fc11-43a7-ba85-cffb57db5249}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayer\ServerBrother">
+      <UniqueIdentifier>{2cfd6569-fdbe-418e-976b-b174aa768f37}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayer\ServerPlayerUI">
+      <UniqueIdentifier>{02917e0b-7ce9-4882-8c49-f2994ac4230c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayer\ServerYoungerBrother">
+      <UniqueIdentifier>{b2461888-b64e-47b6-a9d4-9a3a84e2caf2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -320,28 +320,28 @@
       <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene</Filter>
     </ClCompile>
     <ClCompile Include="ServerBrother.cpp">
-      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerBrother</Filter>
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayer\ServerBrother</Filter>
     </ClCompile>
     <ClCompile Include="ServerPlayer.cpp">
       <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayer</Filter>
     </ClCompile>
     <ClCompile Include="ServerPlayerUI.cpp">
-      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayerUI</Filter>
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayer\ServerPlayerUI</Filter>
     </ClCompile>
     <ClCompile Include="ServerYoungerBrother.cpp">
-      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerYoungerBrother</Filter>
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayer\ServerYoungerBrother</Filter>
     </ClCompile>
     <ClCompile Include="ClientBrother.cpp">
-      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientBrother</Filter>
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayer\ClientBrother</Filter>
     </ClCompile>
     <ClCompile Include="ClientPlayer.cpp">
       <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayer</Filter>
     </ClCompile>
     <ClCompile Include="ClientPlayerUI.cpp">
-      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayerUI</Filter>
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayer\ClientPlayerUI</Filter>
     </ClCompile>
     <ClCompile Include="ClientYoungerBrother.cpp">
-      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientYoungerBrother</Filter>
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayer\ClientYoungerBrother</Filter>
     </ClCompile>
     <ClCompile Include="ClientModeManager.cpp">
       <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientModeManager</Filter>
@@ -526,28 +526,28 @@
       <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene</Filter>
     </ClInclude>
     <ClInclude Include="ServerBrother.h">
-      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerBrother</Filter>
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayer\ServerBrother</Filter>
     </ClInclude>
     <ClInclude Include="ServerPlayer.h">
       <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayer</Filter>
     </ClInclude>
     <ClInclude Include="ServerPlayerUI.h">
-      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayerUI</Filter>
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayer\ServerPlayerUI</Filter>
     </ClInclude>
     <ClInclude Include="ServerYoungerBrother.h">
-      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerYoungerBrother</Filter>
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ServerGameScene\ServerPlayer\ServerYoungerBrother</Filter>
     </ClInclude>
     <ClInclude Include="ClientBrother.h">
-      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientBrother</Filter>
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayer\ClientBrother</Filter>
     </ClInclude>
     <ClInclude Include="ClientPlayer.h">
       <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayer</Filter>
     </ClInclude>
     <ClInclude Include="ClientPlayerUI.h">
-      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayerUI</Filter>
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayer\ClientPlayerUI</Filter>
     </ClInclude>
     <ClInclude Include="ClientYoungerBrother.h">
-      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientYoungerBrother</Filter>
+      <Filter>WinMain\GameMain\SceneManager\Scene\GameScene\ClientGameScene\ClientPlayer\ClientYoungerBrother</Filter>
     </ClInclude>
     <ClInclude Include="Tex.h">
       <Filter>WinMain\GameMain\SceneManager\Scene\GameScene</Filter>
