完全に同期できた。これで無線でも通信できる

--- a/Brother/Brother/Brother.vcxproj
+++ b/Brother/Brother/Brother.vcxproj
@@ -121,6 +121,7 @@
     <ClInclude Include="ServerYoungerBrother.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="..\Release\ip.txt" />
     <Text Include="Texture順番.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
